Fixed summary tile regressions - no joining at certain screen widths - alignment of graphs are now correct again

--- a/src/plugins/control-plane/view/metrics/dashboard/summary/summary.scss
+++ b/src/plugins/control-plane/view/metrics/dashboard/summary/summary.scss
@@ -1,6 +1,7 @@
 @import "node-summary-card/node-summary-card";
 @import "node-count-card/node-count-card";
-@include tile-layout('cards-view', 400px, 5);
+
+@include tile-layout('cards-view', 445px, 5);
 
 .hcp-summary {
   .row:first-of-type {
