--- a/src/plugins/control-plane/view/metrics/graphs/donut/utilization-donut.scss
+++ b/src/plugins/control-plane/view/metrics/graphs/donut/utilization-donut.scss
@@ -1,4 +1,12 @@
 .util-donut {
+  nvd3 {
+    display: flex;
+    flex-direction: column;
+    svg {
+      align-self: center;
+    }
+  }
+
 
   .normal-title {
     font-weight: bold;
